# code-review-agent

./: .gitignore  code-style-guide.md  commit-message.md  pyproject.toml
data/: diff.patch
src/core/: const.py  git_utils.py  main.py
src/core/prompts/: system.py
